<resources>
    <string name="app_name">Mi Calculadora</string>
    <string name="numberOne">1</string>
    <string name="numberTwo">2</string>
    <string name="numberThree">3</string>
    <string name="numberFour">4</string>
    <string name="numberFive">5</string>
    <string name="numberSix">6</string>
    <string name="numberSeven">7</string>
    <string name="numberEight">8</string>
    <string name="numberNine">9</string>
    <string name="numberPor">*</string>
    <string name="numberMenos">-</string>
    <string name="numberZero">0</string>
    <string name="numberPoint">.</string>
    <string name="numberSum">+</string>
    <string name="numberIgual">=</string>

</resources>